[package]
name = "rpcdieselserver"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.10", features = ["sqlite", "returning_clauses_for_sqlite_3_35","time"] }
actix-web="4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy="0.15"
time = {version="0.3.41",features=["serde"]}