[package]
name = "evmnodetooling"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.10", default-features=false, features = ["sqlite"] }
actix-web="4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy="0.15"
rand="0.9.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "applyblueprint"
harness = false